// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calculator.js 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container bg-secondary"
        id="calculator"
      >
        <div
          class="text-end py-2"
          data-testid="display"
        >
          0
        </div>
        <div
          class="row row-cols-4 text-center"
        >
          <button
            class="btn-calculator"
            type="button"
          >
            AC
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            +/-
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            %
          </button>
          <button
            class="btn-calculator operator"
            type="button"
          >
            ÷
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            7
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            8
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            9
          </button>
          <button
            class="btn-calculator operator"
            type="button"
          >
            x
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            4
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            5
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            6
          </button>
          <button
            class="btn-calculator operator"
            type="button"
          >
            -
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            1
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            2
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            3
          </button>
          <button
            class="btn-calculator operator"
            type="button"
          >
            +
          </button>
          <button
            class="btn-calculator col-6"
            type="button"
          >
            0
          </button>
          <button
            class="btn-calculator"
            type="button"
          >
            .
          </button>
          <button
            class="btn-calculator operator"
            type="button"
          >
            =
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container bg-secondary"
      id="calculator"
    >
      <div
        class="text-end py-2"
        data-testid="display"
      >
        0
      </div>
      <div
        class="row row-cols-4 text-center"
      >
        <button
          class="btn-calculator"
          type="button"
        >
          AC
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          +/-
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          %
        </button>
        <button
          class="btn-calculator operator"
          type="button"
        >
          ÷
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          7
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          8
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          9
        </button>
        <button
          class="btn-calculator operator"
          type="button"
        >
          x
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          4
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          5
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          6
        </button>
        <button
          class="btn-calculator operator"
          type="button"
        >
          -
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          1
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          2
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          3
        </button>
        <button
          class="btn-calculator operator"
          type="button"
        >
          +
        </button>
        <button
          class="btn-calculator col-6"
          type="button"
        >
          0
        </button>
        <button
          class="btn-calculator"
          type="button"
        >
          .
        </button>
        <button
          class="btn-calculator operator"
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Navbar.js 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        class="navbar navbar-expand-lg bg-body-tertiary"
      >
        <div
          class="container"
        >
          <a
            class="navbar-brand"
            href="/"
          >
            Mathematicians
          </a>
          <button
            aria-controls="navbarNav"
            aria-expanded="false"
            aria-label="Toggle navigation"
            class="navbar-toggler"
            data-bs-target="#navbarNav"
            data-bs-toggle="collapse"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="collapse navbar-collapse"
            id="navbarNav"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <a
                  aria-current="page"
                  class="nav-link active"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/Calculator"
                >
                  Calculator
                </a>
              </li>
              <li
                class="nav-item"
              >
                <a
                  class="nav-link"
                  href="/Quote"
                >
                  Quote
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
  </body>,
  "container": <div>
    <nav
      class="navbar navbar-expand-lg bg-body-tertiary"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          Mathematicians
        </a>
        <button
          aria-controls="navbarNav"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNav"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNav"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/Calculator"
              >
                Calculator
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/Quote"
              >
                Quote
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
